--- a/src/pages/registro.astro
+++ b/src/pages/registro.astro
@@ -14,7 +14,7 @@ import MariposaClase1Mobile from '../assets/mariposa_clase_1_mobile.png'
 import BereniceDesktop from '../assets/berenice_desktop.png'
 import LayoutCurso from '../layouts/LayoutCurso.astro'
 import Clase1Desktop from '../assets/clase_1_desktop.png'
-import Clase2Desktop from '../assets/clase_2_desktop.png'
+import Clase2Desktop from '../assets/Clase_2_desktop.png'
 import Clase3Desktop from '../assets/clase_3_desktop.png'
 import Clase4Desktop from '../assets/clase_4_desktop.png'
 import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
