--- a/src/pages/registro.astro
+++ b/src/pages/registro.astro
@@ -13,10 +13,10 @@ import BereniceMobileVerde from '../assets/foto_verde_berenice_mobile.png'
 import MariposaClase1Mobile from '../assets/mariposa_clase_1_mobile.png'
 import BereniceDesktop from '../assets/berenice_desktop.png'
 import LayoutCurso from '../layouts/LayoutCurso.astro'
-import Clase1Desktop from '../assets/clase_1_desktop.png'
-import Clase2Desktop from '../assets/clase_2_desktop.png'
-import Clase3Desktop from '../assets/clase_3_desktop.png'
-import Clase4Desktop from '../assets/clase_4_desktop.png'
+import Clase1Desktop from '../assets/clase_1_desktop.webp'
+import Clase2Desktop from '../assets/clase_2_desktop.webp'
+import Clase3Desktop from '../assets/clase_3_desktop.webp'
+import Clase4Desktop from '../assets/clase_4_desktop.webp'
 import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 ---
 
@@ -30,7 +30,7 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 				<div class="mt-6 text-center text-[#3D3553]">
 					<h1 class="text- text-3xl md:text-6xl">Liberate de la <br /> infedilidad y su dolor</h1>
 					<p class="text-sm text-[#70648F] md:pb-8 md:text-2xl">
-						Taller Online - del 25 al 30 de septiembre
+						Taller Online - del 28 al 31 de Octubre
 					</p>
 					<div class="my-3 h-0.5 w-full bg-[#70648F]/70 md:hidden"></div>
 
@@ -54,12 +54,6 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 						<ChevronDown />
 					</div>
 					<form id="registro-form" class="space-y-2 md:space-y-6">
-						<input
-							type="text"
-							name="nombre"
-							placeholder="Tu Nombre"
-							class="h-10 w-full rounded-lg border-2 border-white bg-transparent px-4 text-white placeholder-white/80 focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-0 md:h-14 md:text-xl"
-						/>
 						<input
 							type="email"
 							name="correo"
@@ -296,9 +290,12 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 				<button
 					class="mx-auto block w-[80%] rounded-full border border-white bg-[#7E71A3] p-4 lg:my-8 lg:w-[625px]"
 				>
-					<p class="text-center text-xl font-bold uppercase text-white lg:text-4xl">
+					<a
+						href="#form-element"
+						class="text-center text-xl font-bold uppercase text-white lg:text-4xl"
+					>
 						!Registrate ahora!
-					</p>
+					</a>
 				</button>
 				<div class="relative pb-6">
 					<p class="mx-auto w-[70%] pt-4 text-center text-xs text-white lg:text-xl">
@@ -316,7 +313,7 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 		>
 			esto es lo que vas a aprender en las 4 clases del taller online
 		</h2>
-		<p class="py-2 text-center lg:text-2xl">(del 25 al 30 de Noviembre)</p>
+		<p class="py-2 text-center lg:text-2xl">(del 23 al 31 de Octubre)</p>
 		<div class="grid items-center gap-8 lg:grid-cols-2 lg:pt-8">
 			<div class="relative">
 				<Image
@@ -324,14 +321,14 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 					alt="Clase 1 desktop mock"
 					width={593}
 					height={348}
-					class="mx-auto h-[188px] w-[321px] object-cover md:h-[348px] md:w-[593px]"
+					class="mx-auto h-[188px] w-[321px] rounded-3xl object-cover md:h-[348px] md:w-[593px]"
 					sizes="(max-width: 768px) 321px, 593px"
 				/>
 
 				<h2
 					class="mx-auto w-[80%] text-center text-xl font-bold uppercase text-[#554871] lg:mt-4 lg:text-2xl"
 				>
-					CLASE #1 (Septiembre 25)
+					CLASE #1 (Octubre 28)
 				</h2>
 				<p class="mx-auto px-4 text-center text-lg text-[#554871] lg:w-[50%] lg:pt-4 lg:text-2xl">
 					Arranca de Raíz el dolor de su traición sin morir en el intento
@@ -349,13 +346,13 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 					alt="Clase 2 desktop mock"
 					width={593}
 					height={348}
-					class="mx-auto h-[188px] w-[321px] object-cover md:h-[348px] md:w-[593px]"
+					class="mx-auto h-[188px] w-[321px] rounded-3xl object-cover md:h-[348px] md:w-[593px]"
 					sizes="(max-width: 768px) 321px, 593px"
 				/>
 				<h2
 					class="mx-auto w-[80%] text-center text-xl font-bold uppercase text-[#554871] lg:mt-4 lg:text-2xl"
 				>
-					CLASE #2 (Septiembre 26)
+					CLASE #2 (Octubre 29)
 				</h2>
 				<p
 					class="px-4 text-center text-lg text-[#554871] lg:mx-auto lg:w-[50%] lg:pt-4 lg:text-2xl"
@@ -370,14 +367,14 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 					alt="Clase 3 desktop mock"
 					width={593}
 					height={348}
-					class="mx-auto h-[188px] w-[321px] object-cover md:h-[348px] md:w-[593px]"
+					class="mx-auto h-[188px] w-[321px] rounded-3xl object-cover md:h-[348px] md:w-[593px]"
 					sizes="(max-width: 768px) 321px, 593px"
 				/>
 				<div class="relative">
 					<h2
 						class="mx-auto w-[80%] text-center text-xl font-bold uppercase text-[#554871] lg:mt-4 lg:text-2xl"
 					>
-						CLASE #3 (Septiembre 29)
+						CLASE #3 (Octubre 30)
 					</h2>
 					<p class="mx-auto w-[50%] px-4 text-center text-lg text-[#554871] lg:pt-4 lg:text-2xl">
 						Cómo pasar de la Herida a la libertad emocional
@@ -395,13 +392,13 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 					alt="Clase 4 desktop mock"
 					width={593}
 					height={348}
-					class="mx-auto h-[188px] w-[321px] object-cover md:h-[348px] md:w-[593px]"
+					class="mx-auto h-[188px] w-[321px] rounded-3xl object-cover md:h-[348px] md:w-[593px]"
 					sizes="(max-width: 768px) 321px, 593px"
 				/>
 				<h2
 					class="mx-auto w-[80%] text-center text-xl font-bold uppercase text-[#554871] lg:mt-4 lg:text-2xl"
 				>
-					CLASE #4 (Septiembre 30)
+					CLASE #4 (Octubre 31)
 				</h2>
 				<p
 					class="px-4 text-center text-lg text-[#554871] lg:mx-auto lg:w-[50%] lg:pt-4 lg:text-2xl"
@@ -425,8 +422,8 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 		<div class="grid items-center lg:grid-cols-2">
 			<div>
 				<h2 class="text-center text-white lg:text-4xl">Soy Berenice Bastidas,</h2>
-				<h2 class="text-center text-2xl font-semibold uppercase text-white lg:text-5xl">
-					tu nueva terapeuta
+				<h2 class="text-center text-2xl font-semibold uppercase text-white lg:mt-2 lg:text-5xl">
+					tu nueva psicóloga
 				</h2>
 				<Image
 					src={BereniceTerapeutaD}
@@ -485,7 +482,7 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 	form.addEventListener('submit', async (e) => {
 		e.preventDefault()
 		const data = {
-			name: form.nombre.value,
+			name: 'elsinnombre',
 			email: form.correo.value,
 			eventId: 1
 		}
