feat: active pixel

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -70,16 +70,16 @@ const { title } = Astro.props
 	</head>
 	<body>
 		<!-- Google Tag Manager (noscript) -->
-		<!-- <noscript
+		<noscript
 			><iframe
 				src="https://www.googletagmanager.com/ns.html?id=GTM-TFL5RN5"
 				height="0"
 				width="0"
 				style="display:none;visibility:hidden"></iframe></noscript
-		> -->
+		>
 		<!-- End Google Tag Manager (noscript) -->
 		<slot />
-		<!-- <script is:inline>
+		<script is:inline>
 			;(function (w, d, s, l, i) {
 				w[l] = w[l] || []
 				w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
@@ -90,6 +90,6 @@ const { title } = Astro.props
 				j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
 				f.parentNode.insertBefore(j, f)
 			})(window, document, 'script', 'dataLayer', 'GTM-TFL5RN5')
-		</script> -->
+		</script>
 	</body>
 </html>
