--- a/src/pages/registro.astro
+++ b/src/pages/registro.astro
@@ -28,7 +28,7 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 
 			<div class="px-6">
 				<div class="mt-6 text-center text-[#3D3553]">
-					<h1 class="text- text-3xl md:text-6xl">Liberate de la <br /> infedilidad y su dolor</h1>
+					<h1 class="text- text-3xl md:text-6xl">Liberate de la <br /> infidelidad y su dolor</h1>
 					<p class="text-sm text-[#70648F] md:pb-8 md:text-2xl">
 						Taller Online - del 28 al 31 de Octubre
 					</p>
