--- a/src/pages/registro.astro
+++ b/src/pages/registro.astro
@@ -62,7 +62,7 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 						/>
 						<button
 							class="h-10 w-full cursor-pointer rounded-lg bg-white font-bold uppercase text-[#3D3553] md:h-14 md:text-xl"
-							type="submit">!Quiero mi lugar gratis!</button
+							type="submit">¡Quiero mi lugar gratis!</button
 						>
 					</form>
 					<Image src={MariposaL} alt="Mariposa Top" class="absolute -bottom-8 -left-8" />
@@ -294,7 +294,7 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 						href="#form-element"
 						class="text-center text-xl font-bold uppercase text-white lg:text-4xl"
 					>
-						!Registrate ahora!
+						¡Registrate ahora!
 					</a>
 				</button>
 				<div class="relative pb-6">
@@ -464,7 +464,7 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 						type="button"
 					>
 						<p class="text-center text-xl font-bold uppercase text-white lg:text-3xl">
-							!Registrarme ahora!
+							¡Registrarme ahora!
 						</p>
 					</button>
 				</a>
