--- a/src/layouts/LayoutCurso.astro
+++ b/src/layouts/LayoutCurso.astro
@@ -12,12 +12,20 @@ const { title } = Astro.props
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="Evento Liberate de la
+infidelidad y su dolor " />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
+		<meta property="og:url" content="https://www.gestionatupsicologia.com/registro/" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Evento" />
+		<meta property="og:description" content="Evento Liberate de la
+infidelidad y su dolor " />
+		<meta property="og:image" content="" />
+
 		<AstroFont
 			config={[
 				{
