--- a/src/pages/vip/index.astro
+++ b/src/pages/vip/index.astro
@@ -33,23 +33,46 @@ import { Calendar, CheckCircle2, Star, Users, Video } from '@lucide/astro'
 					<p class="text-pretty mb-8 text-lg md:text-xl lg:text-2xl">
 						Transforma tu dolor en crecimiento personal con nuestro taller intensivo de 4 días
 					</p>
+					<div class="mx-auto lg:flex lg:items-center lg:justify-center lg:gap-6">
+						<div>
+							<div class="mb-8 flex flex-col items-center gap-4 sm:flex-row sm:justify-center">
+								<div class="text-center sm:text-left">
+									<div class="mb-1 text-sm font-medium">Mexico</div>
+									<div class="flex items-baseline gap-2">
+										<span class="text-5xl font-bold text-primary">$100</span>
+										<span class="text-lg">MXN</span>
+									</div>
+								</div>
+							</div>
 
-					<div class="mb-8 flex flex-col items-center gap-4 sm:flex-row sm:justify-center">
-						<div class="text-center sm:text-left">
-							<div class="mb-1 text-sm font-medium">Inversión VIP</div>
-							<div class="flex items-baseline gap-2">
-								<span class="text-5xl font-bold text-primary">$100</span>
-								<span class="text-lg">MXN</span>
+							<div class="flex flex-col gap-4 sm:flex-row sm:justify-center">
+								<a
+									href="https://buy.stripe.com/6oUfZh9mRahT5lT93De7m0p"
+									class="rounded-xl border bg-primary p-2 px-6 text-lg font-semibold text-white hover:shadow-xl"
+									>Reservar Mi Lugar Ahora</a
+								>
 							</div>
 						</div>
-					</div>
 
-					<div class="flex flex-col gap-4 sm:flex-row sm:justify-center">
-						<a
-							href="https://buy.stripe.com/6oUfZh9mRahT5lT93De7m0p"
-							class="rounded-xl border bg-primary p-2 px-6 text-lg font-semibold text-white hover:shadow-xl"
-							>Reservar Mi Lugar Ahora</a
-						>
+						<div>
+							<div class="mb-8 flex flex-col items-center gap-4 sm:flex-row sm:justify-center">
+								<div class="text-center sm:text-left">
+									<div class="mb-1 text-sm font-medium">Otros paises</div>
+									<div class="flex items-baseline gap-2">
+										<span class="text-5xl font-bold text-primary">$5</span>
+										<span class="text-lg">USD</span>
+									</div>
+								</div>
+							</div>
+
+							<div class="flex flex-col gap-4 sm:flex-row sm:justify-center">
+								<a
+									href="https://buy.stripe.com/28E8wP9mRahT9C9enXe7m0q"
+									class="rounded-xl border border-primary p-2 px-6 text-lg font-semibold text-primary hover:shadow-xl"
+									>Reservar Mi Lugar Ahora</a
+								>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
