--- a/src/pages/registro-gracias.astro
+++ b/src/pages/registro-gracias.astro
@@ -38,7 +38,7 @@ import Image from 'astro/components/Image.astro'
 
 <script type="module">
 	const button = document.querySelector('button')
-	const redirectUrl = 'https://chat.whatsapp.com/EGeeP4lKlUJFcM1EHBsQaD?mode=wwt'
+	const redirectUrl = 'https://chat.whatsapp.com/EGeeP4lKlUJFcM1EHBsQaD'
 
 	const timer = setTimeout(() => {
 		window.location.href = redirectUrl
