--- a/src/pages/registrow.astro
+++ b/src/pages/registrow.astro
@@ -68,7 +68,7 @@ import BereniceTerapeutaD from '../assets/berenice_terapeuta_desktop.png'
 					<form id="registro-form" class="space-y-2 md:space-y-6">
 						<button
 							class="h-10 w-full cursor-pointer rounded-lg bg-white font-bold uppercase text-[#3D3553] md:h-14 md:text-xl"
-							type="submit">¡Entrar al grupo de Whatssapp</button
+							type="submit">Entrar al grupo de Whatssapp</button
 						>
 					</form>
 					<Image src={MariposaL} alt="Mariposa Top" class="absolute -bottom-8 -left-8" />
