--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,7 +37,7 @@ import { whatsappLink } from '../utils/contants'
 <nav class="fixed start-0 top-0 z-20 w-full bg-white shadow-lg">
 	<div class="mx-auto flex max-w-screen-xl flex-wrap items-center justify-between p-2 md:p-4">
 		<div class="pl-6">
-			<Image src={logotipo} alt="logotipo" widths={[101, 169]} />
+			<Image src={logotipo} alt="logotipo" widths={[101, 169]} loading="eager" />
 		</div>
 
 		<div
